fix: windows scrollbars with wordwrap off was bad render

--- a/src/styles/brackets_scrollbars.less
+++ b/src/styles/brackets_scrollbars.less
@@ -19,7 +19,7 @@
  *
  */
 
- /* Temporary fix for issue#10150 for weird project tree scrollbar behaviour on mac. Scrollbar not appearing on hover. Forcing the project tree div to render displays the scrollbar. So setting transparent background color of div on hover.
+/* Temporary fix for issue#10150 for weird project tree scrollbar behaviour on mac. Scrollbar not appearing on hover. Forcing the project tree div to render displays the scrollbar. So setting transparent background color of div on hover.
 */
 
 .platform-mac
@@ -156,9 +156,12 @@
 .dark {
     /* Custom scrollbar colors */
     &.platform-win {
-        .CodeMirror-scrollbar-filler,
+        .CodeMirror-scrollbar-filler {
+            background-color:  rgb(30, 30, 30);
+        }
+
         .CodeMirror-gutter-filler {
-            background-color: rgb(15, 15, 15);
+            background-color: transparent;
         }
 
         // Note: when changing padding/margins, may need to adjust metrics in ScrollTrackMarkers.js
